// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate golden snapshot depuis schemas/user.json: register-schema-mirror 1`] = `
"/* Generated from <ROOT>/schemas/user.json */
import { z } from 'zod';

export const RegisterJsonSchema = z.object({
  "firstName": z.string(),
  "lastName": z.string(),
  "email": z.string().email(),
  "password": z.string().min(1),
  "age": z.coerce.number(),
  "acceptTerms": z.boolean(),
  "country": z.enum(["BJ", "FR", "SN", "CI"]),
  "bio": z.string().optional(),
});

export type RegisterJson = z.infer<typeof RegisterJsonSchema>;
"
`;

exports[`generate golden snapshot depuis schemas/user.json: register-screen-json 1`] = `
"/* eslint-disable */
// Generated by rn-schema-ui — avoid hand-edits if you plan to regenerate.
// Targets: iOS, Android, and web (Expo / react-native-web).
/** Expo Router screen — place this file under app/… */
import React, { useCallback } from 'react';
import {
  Alert,
  KeyboardAvoidingView,
  Platform,
  Pressable,
  ScrollView,
  StyleSheet,
  Switch,
  Text,
  TextInput,
  View,
} from 'react-native';
import {
  EmptyState,
  ErrorState,
  LoadingState,
  SuccessState,
  useForm,
} from 'rn-schema-ui-runtime';
import { RegisterJsonSchema } from './schema';

export type RegisterJsonProps = {
  onSuccess?: (values: Record<string, unknown>) => void;
};

export function RegisterJsonScreen(props: RegisterJsonProps = {}): React.ReactElement {
  const { onSuccess } = props;
  const form = useForm({
    schema: RegisterJsonSchema,
    defaultValues: {
    "firstName": '',
    "lastName": '',
    "email": '',
    "password": '',
    "age": undefined,
    "acceptTerms": false,
    "country": '',
    "bio": '',
    },
    onSubmit: async (values) => {
      onSuccess?.(values);
      Alert.alert('Success', 'Form submitted.');
    },
  });

  const { values, errors, setValue, handleSubmit, status, isSubmitting, setStatus, reset } = form;

  const onRetry = useCallback(() => {
    setStatus('idle');
  }, [setStatus]);

  if (status === 'loading' && isSubmitting) {
    return <LoadingState />;
  }
  if (status === 'empty') {
    return <EmptyState />;
  }

  return (
    <KeyboardAvoidingView
      style={styles.flex}
      behavior={Platform.OS === 'ios' ? 'padding' : undefined}
      testID="screen-registerjson"
    >
      <ScrollView contentContainerStyle={styles.container} keyboardShouldPersistTaps="handled">
        <Text style={styles.title}>{"RegisterJson"}</Text>
        {status === 'error' && errors._form ? (
          <ErrorState message={errors._form} onRetry={onRetry} />
        ) : null}
        {status === 'success' ? <SuccessState message="Form validated." /> : null}

      
      <Text style={styles.label} nativeID="label-field-firstName">{"First name"}</Text>
      <TextInput
        value={values["firstName"] == null ? '' : String(values["firstName"])}
        onChangeText={(t) => setValue("firstName", t)}
        accessibilityLabel={"First name"}
        accessibilityHint={"Enter first name"}
        accessibilityLabeledBy="label-field-firstName"
        testID="field-firstName"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["firstName"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-firstName">
          {errors["firstName"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-lastName">{"Last name"}</Text>
      <TextInput
        value={values["lastName"] == null ? '' : String(values["lastName"])}
        onChangeText={(t) => setValue("lastName", t)}
        accessibilityLabel={"Last name"}
        accessibilityHint={"Enter last name"}
        accessibilityLabeledBy="label-field-lastName"
        testID="field-lastName"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["lastName"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-lastName">
          {errors["lastName"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-email">{"Email"}</Text>
      <TextInput
        value={values["email"] == null ? '' : String(values["email"])}
        onChangeText={(t) => setValue("email", t)}
        accessibilityLabel={"Email"}
        accessibilityHint={"Enter your email"}
        accessibilityLabeledBy="label-field-email"
        testID="field-email"
        style={styles.input}
        keyboardType="email-address"
        autoCapitalize="none"
        secureTextEntry={false}
        textContentType="emailAddress"
        autoComplete="email"
      />
      {errors["email"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-email">
          {errors["email"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-password">{"Password"}</Text>
      <TextInput
        value={values["password"] == null ? '' : String(values["password"])}
        onChangeText={(t) => setValue("password", t)}
        accessibilityLabel={"Password"}
        accessibilityHint={"Enter a secure password"}
        accessibilityLabeledBy="label-field-password"
        testID="field-password"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="none"
        secureTextEntry={true}
        textContentType="password"
        autoComplete="password"
      />
      {errors["password"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-password">
          {errors["password"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-age">{"Age"}</Text>
      <TextInput
        value={values["age"] == null ? '' : String(values["age"])}
        onChangeText={(t) => setValue("age", t === "" ? undefined : Number(t))}
        accessibilityLabel={"Age"}
        accessibilityHint={"Enter age"}
        accessibilityLabeledBy="label-field-age"
        testID="field-age"
        style={styles.input}
        keyboardType="numeric"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["age"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-age">
          {errors["age"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-acceptTerms">{"Accept terms"}</Text>
      <View style={styles.row}>
        <Text>{"Accept terms"}</Text>
        <Switch
          value={Boolean(values["acceptTerms"])}
          onValueChange={(v) => setValue("acceptTerms", v)}
          accessibilityLabel={"Accept terms"}
          accessibilityHint={"Enable if accept terms"}
          accessibilityRole="switch"
          testID="field-acceptTerms"
        />
      </View>
      {errors["acceptTerms"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-acceptTerms">
          {errors["acceptTerms"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-country">{"Country"}</Text>
      <View style={styles.chips} accessibilityLabel={"Country"} testID="field-country">
        <Pressable
            key="BJ"
            onPress={() => setValue("country", "BJ")}
            style={[styles.chip, values["country"] === "BJ" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: BJ"}
            testID="field-country-BJ"
          >
            <Text>{"BJ"}</Text>
          </Pressable>
        <Pressable
            key="FR"
            onPress={() => setValue("country", "FR")}
            style={[styles.chip, values["country"] === "FR" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: FR"}
            testID="field-country-FR"
          >
            <Text>{"FR"}</Text>
          </Pressable>
        <Pressable
            key="SN"
            onPress={() => setValue("country", "SN")}
            style={[styles.chip, values["country"] === "SN" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: SN"}
            testID="field-country-SN"
          >
            <Text>{"SN"}</Text>
          </Pressable>
        <Pressable
            key="CI"
            onPress={() => setValue("country", "CI")}
            style={[styles.chip, values["country"] === "CI" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: CI"}
            testID="field-country-CI"
          >
            <Text>{"CI"}</Text>
          </Pressable>
      </View>
      {errors["country"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-country">
          {errors["country"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-bio">{"Bio"}</Text>
      <TextInput
        value={values["bio"] == null ? '' : String(values["bio"])}
        onChangeText={(t) => setValue("bio", t)}
        accessibilityLabel={"Bio"}
        accessibilityHint={"Enter bio"}
        accessibilityLabeledBy="label-field-bio"
        testID="field-bio"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["bio"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-bio">
          {errors["bio"]}
        </Text>
      ) : null}
        <Pressable
          onPress={() => { void handleSubmit(); }}
          accessibilityRole="button"
          accessibilityLabel="Submit"
          testID="submit"
          style={styles.button}
        >
          <Text style={styles.buttonText}>Submit</Text>
        </Pressable>
        <Pressable onPress={() => reset()} testID="reset" accessibilityRole="button" accessibilityLabel="Reset">
          <Text style={styles.link}>Reset</Text>
        </Pressable>
      </ScrollView>
    </KeyboardAvoidingView>
  );
}

const styles = StyleSheet.create({
  flex: { flex: 1 },
  container: { padding: 16, gap: 8 },
  title: { fontSize: 22, fontWeight: '700', marginBottom: 8 },
  label: { fontSize: 14, fontWeight: '600', marginTop: 8 },
  section: { fontSize: 16, fontWeight: '700', marginTop: 16, color: '#334155' },
  input: {
    borderWidth: 1,
    borderColor: '#cbd5e1',
    borderRadius: 8,
    paddingHorizontal: 12,
    paddingVertical: 10,
    fontSize: 16,
  },
  error: { color: '#B00020', fontSize: 13 },
  button: {
    marginTop: 16,
    backgroundColor: '#2563EB',
    padding: 14,
    borderRadius: 8,
    alignItems: 'center',
  },
  buttonText: { color: '#fff', fontWeight: '700' },
  buttonSecondary: {
    marginTop: 8,
    padding: 10,
    borderRadius: 8,
    borderWidth: 1,
    borderColor: '#cbd5e1',
    alignItems: 'center',
  },
  link: { marginTop: 12, textAlign: 'center', color: '#2563EB' },
  row: { flexDirection: 'row', alignItems: 'center', justifyContent: 'space-between', marginTop: 8 },
  chips: { flexDirection: 'row', flexWrap: 'wrap', gap: 8, marginTop: 4 },
  chip: { paddingHorizontal: 12, paddingVertical: 8, borderRadius: 16, borderWidth: 1, borderColor: '#cbd5e1' },
  chipOn: { backgroundColor: '#dbeafe', borderColor: '#2563EB' },
});

export default RegisterJsonScreen;
"
`;

exports[`generate golden snapshot depuis schemas/user.json: register-test-json 1`] = `
"import React from 'react';
import { render, fireEvent, waitFor } from '@testing-library/react-native';
import { RegisterJsonScreen } from '../index';

describe('RegisterJsonScreen', () => {
  it('rend les champs', () => {
    const { getByLabelText, getByTestId } = render(<RegisterJsonScreen />);
  expect(getByLabelText("First name")).toBeTruthy();
    expect(getByTestId('submit')).toBeTruthy();
  });

  it('affiche des erreurs de validation au submit vide', async () => {
    const { getByTestId, findAllByRole } = render(<RegisterJsonScreen />);
    fireEvent.press(getByTestId('submit'));
    const alerts = await findAllByRole('alert');
    expect(alerts.length).toBeGreaterThan(0);
  });

  it('soumet avec succès quand valide', async () => {
    const onSuccess = jest.fn();
    const { getByTestId } = render(<RegisterJsonScreen onSuccess={onSuccess} />);
  fireEvent.changeText(getByTestId('field-firstName'), 'value');
  fireEvent.changeText(getByTestId('field-lastName'), 'value');
  fireEvent.changeText(getByTestId('field-email'), 'user@example.com');
  fireEvent.changeText(getByTestId('field-password'), 'password1');
  fireEvent.changeText(getByTestId('field-age'), '21');
  fireEvent(getByTestId('field-acceptTerms'), 'valueChange', true);
  fireEvent.press(getByTestId('field-country-BJ'));
  fireEvent.changeText(getByTestId('field-bio'), 'value');
    fireEvent.press(getByTestId('submit'));
    await waitFor(() => expect(onSuccess).toHaveBeenCalled());
  });
});
"
`;

exports[`generate golden snapshot écran + test depuis schemas/user.ts: register-screen-zod 1`] = `
"/* eslint-disable */
// Generated by rn-schema-ui — avoid hand-edits if you plan to regenerate.
// Targets: iOS, Android, and web (Expo / react-native-web).
/** Expo Router screen — place this file under app/… */
import React, { useCallback } from 'react';
import {
  Alert,
  KeyboardAvoidingView,
  Platform,
  Pressable,
  ScrollView,
  StyleSheet,
  Switch,
  Text,
  TextInput,
  View,
} from 'react-native';
import {
  EmptyState,
  ErrorState,
  LoadingState,
  SuccessState,
  useForm,
} from 'rn-schema-ui-runtime';
import { userSchema } from '../schemas/user';

export type RegisterProps = {
  onSuccess?: (values: Record<string, unknown>) => void;
};

export function RegisterScreen(props: RegisterProps = {}): React.ReactElement {
  const { onSuccess } = props;
  const form = useForm({
    schema: userSchema,
    defaultValues: {
    "firstName": '',
    "lastName": '',
    "email": '',
    "password": '',
    "age": undefined,
    "acceptTerms": false,
    "country": '',
    "bio": '',
    },
    onSubmit: async (values) => {
      onSuccess?.(values);
      Alert.alert('Success', 'Form submitted.');
    },
  });

  const { values, errors, setValue, handleSubmit, status, isSubmitting, setStatus, reset } = form;

  const onRetry = useCallback(() => {
    setStatus('idle');
  }, [setStatus]);

  if (status === 'loading' && isSubmitting) {
    return <LoadingState />;
  }
  if (status === 'empty') {
    return <EmptyState />;
  }

  return (
    <KeyboardAvoidingView
      style={styles.flex}
      behavior={Platform.OS === 'ios' ? 'padding' : undefined}
      testID="screen-register"
    >
      <ScrollView contentContainerStyle={styles.container} keyboardShouldPersistTaps="handled">
        <Text style={styles.title}>{"Register"}</Text>
        {status === 'error' && errors._form ? (
          <ErrorState message={errors._form} onRetry={onRetry} />
        ) : null}
        {status === 'success' ? <SuccessState message="Form validated." /> : null}

      
      <Text style={styles.label} nativeID="label-field-firstName">{"First name"}</Text>
      <TextInput
        value={values["firstName"] == null ? '' : String(values["firstName"])}
        onChangeText={(t) => setValue("firstName", t)}
        accessibilityLabel={"First name"}
        accessibilityHint={"Enter first name"}
        accessibilityLabeledBy="label-field-firstName"
        testID="field-firstName"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["firstName"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-firstName">
          {errors["firstName"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-lastName">{"Last name"}</Text>
      <TextInput
        value={values["lastName"] == null ? '' : String(values["lastName"])}
        onChangeText={(t) => setValue("lastName", t)}
        accessibilityLabel={"Last name"}
        accessibilityHint={"Enter last name"}
        accessibilityLabeledBy="label-field-lastName"
        testID="field-lastName"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["lastName"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-lastName">
          {errors["lastName"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-email">{"Email"}</Text>
      <TextInput
        value={values["email"] == null ? '' : String(values["email"])}
        onChangeText={(t) => setValue("email", t)}
        accessibilityLabel={"Email"}
        accessibilityHint={"Enter your email"}
        accessibilityLabeledBy="label-field-email"
        testID="field-email"
        style={styles.input}
        keyboardType="email-address"
        autoCapitalize="none"
        secureTextEntry={false}
        textContentType="emailAddress"
        autoComplete="email"
      />
      {errors["email"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-email">
          {errors["email"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-password">{"Password"}</Text>
      <TextInput
        value={values["password"] == null ? '' : String(values["password"])}
        onChangeText={(t) => setValue("password", t)}
        accessibilityLabel={"Password"}
        accessibilityHint={"Enter a secure password"}
        accessibilityLabeledBy="label-field-password"
        testID="field-password"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="none"
        secureTextEntry={true}
        textContentType="password"
        autoComplete="password"
      />
      {errors["password"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-password">
          {errors["password"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-age">{"Age"}</Text>
      <TextInput
        value={values["age"] == null ? '' : String(values["age"])}
        onChangeText={(t) => setValue("age", t === "" ? undefined : Number(t))}
        accessibilityLabel={"Age"}
        accessibilityHint={"Enter age"}
        accessibilityLabeledBy="label-field-age"
        testID="field-age"
        style={styles.input}
        keyboardType="numeric"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["age"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-age">
          {errors["age"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-acceptTerms">{"Accept terms"}</Text>
      <View style={styles.row}>
        <Text>{"Accept terms"}</Text>
        <Switch
          value={Boolean(values["acceptTerms"])}
          onValueChange={(v) => setValue("acceptTerms", v)}
          accessibilityLabel={"Accept terms"}
          accessibilityHint={"Enable if accept terms"}
          accessibilityRole="switch"
          testID="field-acceptTerms"
        />
      </View>
      {errors["acceptTerms"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-acceptTerms">
          {errors["acceptTerms"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-country">{"Country"}</Text>
      <View style={styles.chips} accessibilityLabel={"Country"} testID="field-country">
        <Pressable
            key="BJ"
            onPress={() => setValue("country", "BJ")}
            style={[styles.chip, values["country"] === "BJ" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: BJ"}
            testID="field-country-BJ"
          >
            <Text>{"BJ"}</Text>
          </Pressable>
        <Pressable
            key="FR"
            onPress={() => setValue("country", "FR")}
            style={[styles.chip, values["country"] === "FR" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: FR"}
            testID="field-country-FR"
          >
            <Text>{"FR"}</Text>
          </Pressable>
        <Pressable
            key="SN"
            onPress={() => setValue("country", "SN")}
            style={[styles.chip, values["country"] === "SN" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: SN"}
            testID="field-country-SN"
          >
            <Text>{"SN"}</Text>
          </Pressable>
        <Pressable
            key="CI"
            onPress={() => setValue("country", "CI")}
            style={[styles.chip, values["country"] === "CI" && styles.chipOn]}
            accessibilityRole="button"
            accessibilityLabel={"Country: CI"}
            testID="field-country-CI"
          >
            <Text>{"CI"}</Text>
          </Pressable>
      </View>
      {errors["country"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-country">
          {errors["country"]}
        </Text>
      ) : null}

      
      <Text style={styles.label} nativeID="label-field-bio">{"Bio"}</Text>
      <TextInput
        value={values["bio"] == null ? '' : String(values["bio"])}
        onChangeText={(t) => setValue("bio", t)}
        accessibilityLabel={"Bio"}
        accessibilityHint={"Enter bio"}
        accessibilityLabeledBy="label-field-bio"
        testID="field-bio"
        style={styles.input}
        keyboardType="default"
        autoCapitalize="sentences"
        secureTextEntry={false}
        textContentType="none"
        autoComplete="off"
      />
      {errors["bio"] ? (
        <Text style={styles.error} accessibilityRole="alert" testID="error-bio">
          {errors["bio"]}
        </Text>
      ) : null}
        <Pressable
          onPress={() => { void handleSubmit(); }}
          accessibilityRole="button"
          accessibilityLabel="Submit"
          testID="submit"
          style={styles.button}
        >
          <Text style={styles.buttonText}>Submit</Text>
        </Pressable>
        <Pressable onPress={() => reset()} testID="reset" accessibilityRole="button" accessibilityLabel="Reset">
          <Text style={styles.link}>Reset</Text>
        </Pressable>
      </ScrollView>
    </KeyboardAvoidingView>
  );
}

const styles = StyleSheet.create({
  flex: { flex: 1 },
  container: { padding: 16, gap: 8 },
  title: { fontSize: 22, fontWeight: '700', marginBottom: 8 },
  label: { fontSize: 14, fontWeight: '600', marginTop: 8 },
  section: { fontSize: 16, fontWeight: '700', marginTop: 16, color: '#334155' },
  input: {
    borderWidth: 1,
    borderColor: '#cbd5e1',
    borderRadius: 8,
    paddingHorizontal: 12,
    paddingVertical: 10,
    fontSize: 16,
  },
  error: { color: '#B00020', fontSize: 13 },
  button: {
    marginTop: 16,
    backgroundColor: '#2563EB',
    padding: 14,
    borderRadius: 8,
    alignItems: 'center',
  },
  buttonText: { color: '#fff', fontWeight: '700' },
  buttonSecondary: {
    marginTop: 8,
    padding: 10,
    borderRadius: 8,
    borderWidth: 1,
    borderColor: '#cbd5e1',
    alignItems: 'center',
  },
  link: { marginTop: 12, textAlign: 'center', color: '#2563EB' },
  row: { flexDirection: 'row', alignItems: 'center', justifyContent: 'space-between', marginTop: 8 },
  chips: { flexDirection: 'row', flexWrap: 'wrap', gap: 8, marginTop: 4 },
  chip: { paddingHorizontal: 12, paddingVertical: 8, borderRadius: 16, borderWidth: 1, borderColor: '#cbd5e1' },
  chipOn: { backgroundColor: '#dbeafe', borderColor: '#2563EB' },
});

export default RegisterScreen;
"
`;

exports[`generate golden snapshot écran + test depuis schemas/user.ts: register-test-zod 1`] = `
"import React from 'react';
import { render, fireEvent, waitFor } from '@testing-library/react-native';
import { RegisterScreen } from '../index';

describe('RegisterScreen', () => {
  it('rend les champs', () => {
    const { getByLabelText, getByTestId } = render(<RegisterScreen />);
  expect(getByLabelText("First name")).toBeTruthy();
    expect(getByTestId('submit')).toBeTruthy();
  });

  it('affiche des erreurs de validation au submit vide', async () => {
    const { getByTestId, findAllByRole } = render(<RegisterScreen />);
    fireEvent.press(getByTestId('submit'));
    const alerts = await findAllByRole('alert');
    expect(alerts.length).toBeGreaterThan(0);
  });

  it('soumet avec succès quand valide', async () => {
    const onSuccess = jest.fn();
    const { getByTestId } = render(<RegisterScreen onSuccess={onSuccess} />);
  fireEvent.changeText(getByTestId('field-firstName'), 'value');
  fireEvent.changeText(getByTestId('field-lastName'), 'value');
  fireEvent.changeText(getByTestId('field-email'), 'user@example.com');
  fireEvent.changeText(getByTestId('field-password'), 'password1');
  fireEvent.changeText(getByTestId('field-age'), '21');
  fireEvent(getByTestId('field-acceptTerms'), 'valueChange', true);
  fireEvent.press(getByTestId('field-country-BJ'));
  fireEvent.changeText(getByTestId('field-bio'), 'value');
    fireEvent.press(getByTestId('submit'));
    await waitFor(() => expect(onSuccess).toHaveBeenCalled());
  });
});
"
`;
